parfait/components/sidebar.css
/* 
  Parfait - sidebar.css
  https://github.com/reizumii/parfait
*/

/* top bar */
@media -moz-pref("sidebar.verticalTabs") {
  #nav-bar {
    min-height: var(--pf-topbar-height) !important;
  }
  #tabbrowser-tabbox, #sidebar-box {
    transition-delay: var(--pf-ts-15) !important;
  }
  /* todo: optimize later */
  /* check sidebar state */
  :root {
    &:has(#tabbrowser-tabs:not([expanded])) {
      @media not -moz-pref("sidebar.visibility", "hide-sidebar") {
        --pf-topbar-margin: 0;
        --pf-bookmarks-margin: var(--pf-sidebar-collapsed);
        
        :is(#tabbrowser-tabbox, #sidebar-box) {
          transition-delay: 0s !important;
        }
      }
    }
    @media -moz-pref("sidebar.visibility", "expand-on-hover") {
      --pf-topbar-margin: 0;
    }
    @media not (-moz-platform: macos) {
      @media -moz-pref("parfait.traffic-lights.enabled", false) {
        &:has(.titlebar-buttonbox-container:hover) {
          --pf-topbar-margin: 0;
        }
      }
    }
    &:has(
      #nav-bar toolbarbutton[open]:not(#urlbar-searchmode-switcher),
      #nav-bar:hover, #downloads-button[notification]
    ) :is(#tabbrowser-tabbox, #sidebar-box, #sidebar-splitter) {
      margin-top: 0 !important;
      transition-delay: 0s !important;
    }
    /* auto hide navbar */
    @media -moz-pref("parfait.toolbar.unified-sidebar") {
      &:not([inDOMFullscreen]):has(
        .titlebar-buttonbox-container:hover,
        #urlbar:hover, #sidebar-button:hover,
        #back-button:hover, #forward-button:hover,
        #stop-reload-button:hover, #vertical-spacer:hover
      ):is(#main-window) :is(#tabbrowser-tabbox, #sidebar-box, #sidebar-splitter),
      &:not([inDOMFullscreen]) :is(#tabbrowser-tabbox, #sidebar-box, #sidebar-splitter) {
        margin-top: var(--pf-topbar-margin) !important;
        transition: margin-top var(--pf-ts-25);
      }
    }
  }
  /* sidebar button gutter */
  :root:not([customizing]) {
    #nav-bar-customization-target {
      .toolbarbutton-1:first-child:is(#sidebar-button) {
        transition: margin-inline-end var(--pf-ts-25);
        
        /* todo: fix this mess later */
        @media -moz-pref("parfait.traffic-lights.enabled", false) and -moz-pref("parfait.toolbar.sidebar-gutter") {
          margin-inline-start: var(--pf-separation) !important;
          
          @media not (-moz-platform: macos) {
            :root:has(#tabbrowser-tabs[expanded]) & {
              margin-inline-end: calc(var(--pf-sidebar-gutter) - var(--pf-separation)) !important;
            }
          }
        }
        @media -moz-pref("parfait.traffic-lights.enabled") and -moz-pref("parfait.toolbar.sidebar-gutter") {
          :root:has(#tabbrowser-tabs[expanded]) & {
            margin-inline-end: var(--pf-sidebar-gutter) !important;
            margin-inline-start: 0 !important;
          }
        }
        @media -moz-pref("parfait.toolbar.sidebar-gutter") and (-moz-platform: macos) {
          margin-inline-end: var(--pf-sidebar-gutter-macos) !important;
          margin-inline-start: 0 !important;
          
          :root[macOSNativeFullscreen]:has(#tabbrowser-tabs[expanded]) & {
            margin-inline-start: var(--pf-separation) !important;
            margin-inline-end: calc(var(--pf-sidebar-gutter) - var(--pf-separation)) !important;
          }
        }
        @media -moz-pref("sidebar.visibility", "expand-on-hover") {
          --pf-sidebar-gutter: 0;
        }
      }
    }
  }
  /* main sidebar */
  #sidebar-main {
    width: var(--pf-sidebar-collapsed);
    
    &:has(#tabbrowser-tabs[expanded]) {
      width: var(--pf-sidebar-width) !important;
      transition: width var(--pf-ts-25), transform var(--pf-ts-25) !important;
      
      #vertical-tabs {
        width: var(--pf-sidebar-width);
        -moz-window-dragging: drag;
      }
      @media not -moz-pref("sidebar.visibility", "expand-on-hover") {
        margin-top: var(--pf-sidebar-margin);
      }
      @media -moz-pref("parfait.toolbar.unified-sidebar", false) {
        margin-top: 0;
      }
    }
  }
  .wrapper {
    width: 100% !important;
  }
}
#tabbrowser-tabs[orient="vertical"] {
  grid-gap: 2px !important;
}
#sidebar-launcher-splitter {
  display: none !important;
}

/* sidebar: collapsed mode */
#tabbrowser-tabs:not([expanded]) {
  --tab-collapsed-background-width: var(--pf-tab-height);
  
  .tab-group-label-container {
    margin-inline: 0 !important;
  }
  .tab-group-label {
    min-width: var(--pf-tab-height) !important;
    
    &::before {
      margin-inline: 3px;
    }
    &::after {
      left: 9px;
    }
  }
}

/* sidebar 2 */
@media -moz-pref("sidebar.verticalTabs") {
  #sidebar-box,
  :root:has(#tabbrowser-tabs[expanded]) #sidebar-splitter {
    padding-block-end: var(--pf-browser-separation) !important;
    --browser-area-z-index-sidebar: 2;
    
    @media -moz-pref("parfait.toolbar.unified-toolbar") {
      margin-top: calc(var(--pf-browser-separation) - var(--pf-topbar-height)) !important;
      transition: margin-top var(--pf-ts-25);
    }
  }
  #sidebar {
    --border-radius-medium: var(--pf-browser-radius) !important;
  }
  #sidebar-splitter {
    width: var(--pf-browser-separation) !important;
    margin-bottom: var(--pf-browser-separation) !important;
    transition: var(--pf-ts-25) !important;
  }
  #inputs[part="inputs"] {
    padding-inline: 0 !important;
    --sidebar-box-background: var(--pf-toolbar-bgcolor);
    --sidebar-box-border: none;
    --panel-separator-color: light-dark(white, black);
  }
  legend[part="label"] {
    font-size: 14px;
    margin-bottom: 4px;
  }
  moz-checkbox {
    padding-inline: var(--space-medium);
  }
  .label-wrapper > #label {
    display: flex !important;
  }
  .text-container {
    display: flex;
    flex-direction: row-reverse;
    align-items: center;
    width: 100%;
    
    & > .text {
      margin-inline-end: auto;
    }
    & > .icon[src^="chrome://"] {
      fill: var(--pf-icon-color) !important;
    }
  }
}
/* ... */

